<resources>

    <string name="app_name">HCI Reaction Test</string>

    <string name="main_menu_headline">Main-Menu for Reaction-Test App</string>

    <string name="btn_visual_text">Reaktionszeit auf einen visuellen Reiz</string>
    <string name="btn_acoustic_text">Reaktionszeit auf einen akustischen Reiz</string>
    <string name="btn_desicions_text">Reaktionszeit mit Entscheidung</string>
    <string name="btn_filter_text">Reaktionszeit mit Filterung von Reizen</string>

    <!--Test-Types-->
    <string name="visual_test_type">visual</string>
    <string name="acoustic_test_type">acoustic</string>
    <string name="decision_test_type">decision</string>
    <string name="filter_test_type">filter</string>

    <!--Dialog-Texts-->
    <string name="dialog_title">Test-User Info</string>
    <string name="dialog_save">Speichern</string>
    <string name="dialog_cancel">Abbrechen</string>
    
    <!--Default Time value-->
    <string name="default_time_value">00:000</string>

    <!--Keys SharedPrefernces-->
    <string name="KEY_USERID">userID</string>
    <string name="KEY_AGE">age</string>
    <string name="KEY_GENDER">gender</string>
    <string name="KEY_GENDER_STRING">gender_string</string>

    <!--Values SharedPreferences gender-->
    <string name="value_male">maennlich</string>
    <string name="value_female">weiblich</string>

    <!--Radio-Group Texts-->
    <string name="radio_btn_male">männlich</string>
    <string name="radio_btn_female">weiblich</string>
    
    <!--Toast texts for Exceptions or success-->
    <string name="database_storing_successfull">Datensatz erfolgreich gespeichert</string>
    <string name="database_storing_failure">Datensatz speichern fehlgeschlagen</string>
    <string name="write_csv_succeed">CSV-Datei wurde unter "Documents" gespeichert</string>
    <string name="write_csv_failure">Speichern der CSV-Datei ist fehlgeschlagen</string>
    <string name="user_info_updated">Test-User Info wurde aktualisiert</string>
    <string name="false_button">Falscher Button</string>

    <!--Hints for EditTexts-->
    <string name="hint_txt_userID">UserID (nur Buchstaben)</string>
    <string name="hint_txt_age">Alter</string>

    <!--Button-Texts for Reaction Tests Activities-->
    <string name="btn_text_start">Start</string>
    <string name="btn_text_stop">Stopp</string>
    <string name="btn_text_stop_red">Rot</string>
    <string name="btn_text_stop_blue">Blau</string>

    <!--Menu items title-->
    <string name="item_help_text">Hilfe</string>
    <string name="save_csv">Datenbank in CSV-Datei speichern</string>
    <string name="user_infos">Test-User Infos</string>

    <!--Help texts for the 4 test-activities-->
    <string name="help_visual"></string>
    <string name="help_acoustic"></string>
    <string name="help_decision"></string>
    <string name="help_filter"></string>

    <!--Snackbar Texts-->
    <string name="snackbar_message">Keine Berechtigung erhalten</string>
    <string name="snackbar_action">Berechtigen</string>

    




</resources>
