<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnVisual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_action_eye"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/btn_visual_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAcustics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_volume"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/btn_acoustic_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnVisual" />

        <Button
            android:id="@+id/btnDesicions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_action_decision"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/btn_desicions_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAcustics" />

        <Button
            android:id="@+id/btnFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="60dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_action_filter"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:text="@string/btn_filter_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDesicions" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>