<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".reaction_tests.AcousticReactionTestActivity">

    <View
        android:id="@+id/view_color_container"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@drawable/black_border_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_volume"
        app:layout_constraintEnd_toEndOf="@id/view_color_container"
        app:layout_constraintStart_toStartOf="@id/view_color_container"
        app:layout_constraintTop_toTopOf="@id/view_color_container"
        app:layout_constraintBottom_toBottomOf="@id/view_color_container"
        />

    <TextView
        android:id="@+id/text_view_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/default_time_value"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/view_color_container"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/view_color_container" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Zeit:"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_time"
        app:layout_constraintStart_toStartOf="@+id/view_color_container"
        app:layout_constraintTop_toTopOf="@+id/text_view_time" />

    <Button
        android:id="@+id/btnAction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/black_border_shape_round_corners"
        android:text="@string/btn_text_stop"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view_color_container"
        app:layout_constraintStart_toStartOf="@+id/view_color_container"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/black_border_shape_round_corners"
        android:text="@string/btn_text_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_time" />

</android.support.constraint.ConstraintLayout>